<?xml version="1.0" encoding="utf-8"?>
<!-- NOTE: all xml files cannot have uppercase characters in them -->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<random1.comp6733.SensorItemView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sensorItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/paddingTinySpace"
    android:layout_marginTop="@dimen/paddingTinySpace"
    android:layout_marginRight="@dimen/paddingTinySpace"
    android:layout_marginBottom="@dimen/paddingNone"
    android:background="@color/colorSensorItemBackground"
    android:orientation="vertical"
    android:padding="@dimen/paddingSmallSpace">

    <TextView
        android:id="@+id/sensorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringSensorTitle"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/sensorInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/paddingTinySpace"
        android:paddingBottom="@dimen/paddingTinySpace">

        <LinearLayout
            android:id="@+id/sensorInfoKeyLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/paddingNone"
            android:paddingLeft="@dimen/paddingNone"
            android:paddingEnd="@dimen/paddingSmallSpace"
            android:paddingRight="@dimen/paddingSmallSpace">

            <TextView
                android:id="@+id/sensorMacKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringMacAddress"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sensorUuidKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringUuid"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sensorInfoValueLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sensorMacValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stringUnknown" />

            <TextView
                android:id="@+id/sensorUuidValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stringUnknown" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sensorRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/enableSensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/stringRegisterSensor" />
        <!-- CheckBox: layoutDirection moves the checkbox to the right -->

        <LinearLayout
            android:id="@+id/sensorSpinnerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sensorBodyKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stringSelectBodyPart"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sensorBodyValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/bodyParts" />

        </LinearLayout>

    </LinearLayout>
</random1.comp6733.SensorItemView>
<!--</LinearLayout>-->